--- a/Flower_shop_TG/Website/flower_shop/shop/templates/checkout.html
+++ b/Flower_shop_TG/Website/flower_shop/shop/templates/checkout.html
@@ -1,6 +1,14 @@
-<h2>Оформление заказа</h2>
-<form method="post">
-  {% csrf_token %}
-  <!-- Поля для ввода данных о доставке -->
-  <button type="submit">Подтвердить заказ</button>
-</form>
+{% extends 'base.html' %}
+
+{% block title %}Checkout{% endblock %}
+
+{% block content %}
+    <h2>Checkout</h2>
+    <form method="post" action="{% url 'process_order' %}">
+        {% csrf_token %}
+        <label for="address">Delivery Address:</label>
+        <input type="text" id="address" name="address" required>
+        <br><br>
+        <button type="submit">Place Order</button>
+    </form>
+{% endblock %}
