--- a/Flower_shop_TG/Website/flower_shop/shop/templates/product_list.html
+++ b/Flower_shop_TG/Website/flower_shop/shop/templates/product_list.html
@@ -1,9 +1,22 @@
-{% for product in products %}
-  <div>
-    <h2>{{ product.name }}</h2>
-    <p>{{ product.description }}</p>
-    <p>{{ product.price }}</p>
-    <img src="{{ product.image.url }}" alt="{{ product.name }}">
-    <a href="{% url 'product_detail' product.id %}">Подробнее</a>
-  </div>
-{% endfor %}
+{% extends 'base.html' %}
+
+{% block title %}Flower Catalog{% endblock %}
+
+{% block content %}
+    <h2>Catalog of Flowers</h2>
+    <div>
+        {% for product in products %}
+        <div>
+            <h3>{{ product.name }}</h3>
+            <p>{{ product.description }}</p>
+            <p>Price: {{ product.price }}</p>
+            <img src="{{ product.image.url }}" alt="{{ product.name }}" width="150px">
+            <form method="post" action="{% url 'add_to_cart' product.id %}">
+                {% csrf_token %}
+                <button type="submit">Add to Cart</button>
+            </form>
+        </div>
+        <hr>
+        {% endfor %}
+    </div>
+{% endblock %}
